--- a/main.html
+++ b/main.html
@@ -4,6 +4,7 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<title>HTML Assignment 3</title>
 </head>
 
 <body>
@@ -11,6 +12,76 @@
     <script type="text/javascript" src="./script.js">
 </script>
 
+	<h3>HTML Assignment #3</h3>
+
+	<table id="table-1" class="middle">
+		<tr class="top">
+			<td id="t11" class="left">left<left/td>
+			<td id="t12" class="centre">center</td>
+			<td id="t13" class="right">right</td>
+		</tr>
+
+		<tr class="center">
+			<td class="left">left<left/td>
+			<td class="centre">center</td>
+			<td class="right">right</td>
+		</tr>
+
+		<tr class="bottom">
+			<td class="left">left<left/td>
+			<td class="centre">center</td>
+			<td class="right">right</td>
+		</tr>
+	</table><br><br>
+
+	<table id="table-2">
+		<tr>
+			<td colspan=6 id="t21"></td>
+		</tr>
+		<tr>
+			<td rowspan=4></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+		</tr>
+			
+		<tr>
+			<td></td>
+			<td colspan=3 rowspan=2></td>
+			<td></td>
+		</tr>
+
+		<tr>
+			<td></td>
+			<td></td>
+		</tr>
+
+		<tr>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+		</tr>
+
+		<tr>
+			<td colspan=6></td>
+		</tr>
+	</table><br><br>
+
+	<table id="table-3">
+		<tr>
+			<td style="background-color: green"></td>
+		</tr>
+		<tr>
+			<td id="t-image"><img src="https://www2.d125.org/applied_arts/teched/courses/WEB/portfolios/2013_FallP3/Luthra%20Portfolio/images-1.jpeg"></td>
+		</tr>
+		<tr>
+			<td style="background-color: blue"></td>
+		</tr>
+	</table>
 </body>
 
 </html>
